Fixed global navigation line height and button spacing

--- a/app/assets/stylesheets/reimagine/layout/_page-layout.css.scss
+++ b/app/assets/stylesheets/reimagine/layout/_page-layout.css.scss
@@ -15,12 +15,10 @@ html { background: $footer-color; }
   @include pad(0 1em);
 
   @include media($tablet) {
-    background-color: yellow !important;
     @include span-columns(8);
   }
 
   @include media($mobile) {
-    background-color:red !important;
     @include span-columns(4);
   }
 
