--- a/app/assets/stylesheets/reimagine/modules/_global-nav.css.scss
+++ b/app/assets/stylesheets/reimagine/modules/_global-nav.css.scss
@@ -22,17 +22,22 @@
 
 */
 
-
-$nav-pad: 0.4em;
-
 #global-nav {
   background: white;
   box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
-  padding: $nav-pad 0;
+  padding: 0.5em 0;
   position: relative;
   z-index: 100; //so we can see the drop shadow
 
-  #logo { position: relative; top: $nav-pad; }
-  #global-nav-links {float: left;}
+  #logo {
+    padding-right: $base-font-size;
+    img { display: inline-block; vertical-align: middle; }
+  }
+
+  #global-nav-links {
+    float: left;
+    .button { padding: $base-font-size/2 $base-font-size; }
+  }
+
   #global-nav-account {float: right;}
 }
